# heirloom

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  _references  config.example.toml  pom.xml
docs/: ROADMAP.md  core-concepts.md
docs/adr/: 001-semantic-core-as-hub.md  002-abilities-as-type-contracts.md  003-storage-separation.md  004-json-dsl-query-language.md  005-nine-step-action-pipeline.md  006-three-relationship-semantics.md  007-semantic-constrains-kinetic.md  (+41 more)
heirloom-connector/: pom.xml
heirloom-core/: pom.xml
heirloom-docs/: README.md  agent-workflow.mdx  architecture.mdx  deployment.mdx  docs.json  faq.mdx  introduction.mdx  quickstart.mdx  roadmap.mdx  security-model.mdx  why-heirloom.mdx
heirloom-mcp/: pyproject.toml  server.py
heirloom-sdk/: .gitignore  pyproject.toml
heirloom-sdk/heirloom_sdk/: __init__.py  cli.py
heirloom-sdk/tests/: test_cli.py  test_client.py
heirloom-server/: .gitignore  mvnw  pom.xml
src/: config.rs  context.rs  error.rs  lib.rs  main.rs
tests/: integration_tests.rs
website/: README.md  index.html  package-lock.json  package.json  vite.config.ts
whitepapers/: 00-abstract-introduction.md  appendix-adoption-maturity.md  appendix-glossary.md  appendix-open-source-reference.md  enterprise-world-model.md  part1-design-philosophy.md  part2-technical-architecture.md  part3-palantir-comparison.md  part4-scenarios.md  part5-limitations.md  part6-conclusion.md
workshop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
workshop-dev/: package-lock.json  vite.config.ts
(+693 files in other folders)
