[package]
name = "heirloom"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-cors = "0.7"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1.7"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
async-trait = "0.1"
url = "2.5"

[dev-dependencies]
tempfile = "3.14"
wiremock = "0.6"
