[project]
name = "heirloom-sdk"
version = "0.5.0"
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[project.scripts]
heirloom = "heirloom_sdk.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["heirloom_sdk*"]

[tool.setuptools.package-data]
"heirloom_sdk" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]